@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19920813
+MANIFEST for ded, version t19920814
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 Makefile                        top-level makefile for unix directory editor
